Support for debugging virtual threads